<?xml version='1.0' encoding='UTF-8'?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="menu_settings">Settings</string>
    <string name="desc_list_item_left_icon">desc_list_item_icon</string>
    <!-- SAMEPINCH specifics -->
    <string name="app_name">SamePinch</string>
    <string name="deeplink_name_with_host">www.samepinch.co</string>
    <string name="deeplink_name">samepinch</string>
    <string name="deeplink_open">/droidlaunch</string>
    <!-- pinch handle-->
    <string name="pinch_handle">\u0040<xliff:g id="handle">%1$s</xliff:g></string>
    <string name="terms_n_cond">Terms \u0026 Conditions</string>
    <string name="enter_comment">enter your advice here\u2026</string>
    <string name="enter_post">type here\u2026</string>
    <string name="select_tags">tag this post with</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="welcome_title">Welcome to SamePinch</string>
    <string name="sign_in_label">Sign in</string>
    <string name="post_create_label">post</string>
    <string name="post_as_you">as you</string>
    <string name="post_as_anonymous">as anonymous</string>

    <string name="post_edit_label">update</string>
    <string name="post_del_label">delete</string>
    <string name="post_del_pop_title">Delete post?</string>
    <string name="post_del_pop_desc">Deleted post may not be recovered. You loose complete data including likes, advises, views, etc. Better yet, you can choose to edit.</string>
    <string name="post_del_positive">OK</string>
    <string name="post_del_negative">Cancel</string>

    <string name="sign_out_label">Sign out</string>
    <!--<string name="fb_app_id">1646195582278585</string>-->
    <string name="facebook_app_id">1636478616583615</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">\u2026</string>
    <string name="loading_with_text">Loading\u2026</string>
    <string name="by">posted by\u0020</string>
    <string name="empty"/>
    <string name="login_step1">enter your phone # or email</string>
    <string name="login_btn_next">\u3009</string>
    <string name="login_btn_prev">\u3008</string>
    <string name="q_mark">\u003F</string>

    <string name="settings_notifs">Push Notifications</string>
    <string name="settings_notifs_subline">set when you want to get notified</string>
    <string name="settings_notifs_posts">Posts I made</string>
    <string name="settings_notifs_posts_likes">Posts I am interested-in (like posts by me or someone I like, etc.)</string>
    <string name="settings_notifs_posts_likes_tags">Posts into tags I am currently subscribed to</string>
    <string name="settings_email">Email Settings</string>
    <string name="settings_email_subline">subscription allows you to get email digests, important communication, etc. </string>
    <string name="settings_email_subscribe">Subscribe</string>

    <!-- SHARE -->
    <string name="share_subject">I\u0027ve started using SamePinch app\u0021</string>
    <string name="share_body">Thought you may be interested to check out this app I am in love with.\u000A\u000AGet your copy from Android\u002FApple store. \u000A\u000AA SamePinch Fan \u000Awww.samepinch.co</string>

    <!-- FEEDBACK -->
    <string name="feedback_to">friends@samepinch.co</string>
    <string name="feedback_subject">SamePinch Feedback</string>

    <!-- FLAG -->
    <string name="flag_title">Flag as</string>
    <string name="flag_btn_choose">Send</string>
    <string name="flag_btn_cancel">Cancel</string>

    <!-- NOTIFICATIONS -->
    <string name="notifs_title">NOTIFICATIONS</string>
    <string name="notifs_none">Good job! You\u0027re all caught up.</string>

    <!-- CHANGE PASSWORD -->
    <string name="change_password_title">Change Password</string>
    <string name="change_password_positive">Update</string>
    <string name="change_password_negative">@android:string/cancel</string>

    <!-- ADMIN MESSAGES -->
    <string name="dialog_update">Upgrade available.\u000A\u000AWe have some cool and greatest features waiting for you in our latest version\u0021</string>
    <string name="dialog_f_update">You must upgrade SamePinch.\u000A\u000APlease visit Google Play Store to upgrade.</string>
    <string name="dialog_referrals">Loving SamePinch app\u003F\u000A\u000AYou can help us reach more SamePinch\u0027ers around the globe.\u000AUse \u0022Spread Your Love\u0022 feature when you login.</string>
    <string name="dialog_review">A quick appreciation means a lot to us\u0021\u000A\u000APlease rate SamePinch app.\u000A\u000AWe read every single review and respond appropriately.</string>
    <string name="dialog_login">Login to organize your posts, likes, topics, etc.\u000A\u000AIt takes a quick moment to create your account incase if you do not have one yet\u0021\u003F</string>
    <string name="dialog_post">Create a POST.\u000A\u000ASamePinch\u0027ers around the globe are here to help you\u0021\u000A\u000AWhat are you waiting for\u003F</string>
    <string name="dialog_ok">DISMISS</string>
    <string name="hint_email">Email</string>
    <string name="hint_phno">Phone</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_acc_create">No account yet? Create one</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_create_acc">Create My Account</string>
    <string name="hint_a_member">Already a member? Login</string>
    <string name="hint_comment">advice</string>
    <string name="hint_dislike">dislike</string>
    <string name="hint_edit">edit</string>
    <string name="hint_flag">flag</string>
    <string name="hint_share">share</string>
    <string name="hint_sms">SMS</string>
    <string name="hint_unflag">un-flag</string>
    <string name="hint_like">like</string>
    <string name="hint_curr_pass">your current password</string>
    <string name="hint_new_pass">new password</string>
    <string name="hint_confirm_pass">confirm new password</string>
    <string name="hint_almost_done">almost done.</string>
    <string name="hint_choose_handle">CHOOSE YOUR UNIQUE PINCH HANDLE</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_done">Done</string>
    <string name="hint_wall">Wall</string>
    <string name="hint_you_starred">You Starred</string>
    <string name="hint_wall_name">name</string>
    <string name="hint_wall_handle">handle</string>
    <string name="hint_blog">blog</string>
    <string name="hint_pinch_handle">Pinch Handle</string>
    <string name="hint_about_me">About Me</string>
    <string name="hint_my_blog">My Blog</string>
    <string name="hint_change_pass">change password</string>
    <string name="title_comment">ADVICE</string>
    <string name="title_as_you">as you</string>
    <string name="title_as_anonymous">as anonymous</string>
    <string name="title_update">UPDATE</string>
    <string name="menu_home">Home</string>
    <string name="title_the_app">THE APP</string>
    <string name="menu_spread">Spread Your Love</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sys_status">System Status</string>
    <string name="menu_post">Post</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="hint_dot">DOT</string>
    <string name="hint_name">NAME</string>
    <string name="hint_date">DATE</string>
    <string name="hint_pinch_handle_u">PINCH HANDLE</string>
    <string name="hint_views">VIEWS</string>
    <string name="hint_votes">VOTES</string>
    <string name="hint_content">CONTENT</string>
    <string name="hint_signing_out">Signing out</string>
    <string name="btn_try_again">try again</string>
    <string name="hint_more">More options</string>
    <string name="msg_no_email">Unable to find email application on your device.</string>
    <string name="msg_login_req">please login to seek an advice</string>
    <string name="hint_or">alternatively</string>
    <string name="must_login">help us weed out the trolls</string>
    <string name="pin_verify_hint">we genuinely care about you</string>
    <string name="country_login">I live in</string>
    <string name="dialog_acc_locating">locating your account\r\n%s</string>
    <string name="dialog_acc_found">AWESOME! found...\r\n:-)</string>
    <string name="dialog_acc_notfound">Quickly creating your account\r\n:-)</string>
    <string name="dialog_acc_lookuperr">error occurred. try again...</string>
    <string name="reqd_login_info">required</string>
    <string name="reqd_err">required</string>
    <string name="pass_must_match">passwords must match</string>

    <string name="reqd_valid_login_info">invalid format</string>
    <string name="hint_choose_password">choose a password</string>
    <string name="hint_enter_password">enter your password</string>
    <string name="password_reset">reset password</string>
    <string name="dialog_acc_creating_sing_in_wait">hang in there\r\nyou\u0027re almost done...</string>
    <string name="dialog_pass_reset_wait">hang in there\r\nresetting your password...</string>
    <string name="dialog_pass_general_err">Hmm...something is not right. try again.</string>
    <string name="dialog_acc_creating_success">Yay, You Did It!\r\nWelcome...Welcome...Welcome</string>
    <string name="dialog_acc_creating_err">Hmm...something is not right:-(\r\Try again</string>
    <string name="dialog_acc_signin_success">NAMASTE\r\nwelcome back!</string>
    <string name="dialog_acc_signin_err">Hmm...login failed:-(\r\nCheck your details and try again!</string>
    <string name="phoneverify_enter">your phone number</string>
    <string name="phoneverify_general_err">Hmm...something is not right. try again.</string>
    <string name="phoneverify_sms_sent">we\u0027ve sent you a PIN for verification</string>
    <string name="phoneverify_seccess">successfully verified your account</string>
    <string name="phoneverify_btn_verify">verify</string>
    <string name="phoneverify_btn_resend">resend</string>
    <string name="phoneverify_later">later</string>
    <string name="phone_pin_verify_enter">enter your pin</string>
    <string name="title_activity_enter_phone">EnterPhoneActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notice_update_email">stay informed. stay connected.\nUPDATE EMAIL</string>
    <string name="notice_update_phone">your account unverified\nVERIFY NOW</string>
    <string name="notice_login">let\u0027s get started</string>
    <string-array name="post_colors">
        <item>#FFEB3B</item>
        <item>#DDA95A96</item>
        <item>#CDDC39</item>
        <item>#EA8B00</item>

        <!--<item>#F062Ω92</item>-->

        <!--<item>#BA68C8</item>-->
        <!--<item>#FFFFFF</item>-->
         <!--<item>#B9F6CA</item>-->
        <!--<item>#FFD180</item>-->
        <!--<item>#FF9E80</item>-->
        <!--<item>#FF9E80</item>-->
    </string-array>
</resources>