<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/ip_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        style="@style/EditTextCustomHolo"
        android:gravity="center"/>
    <TextView
        android:id="@+id/btn_pass_reset"
        style="@style/SP_TXT_BTN_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ip_password"
        android:text="@string/password_reset"
        android:textColor="@drawable/enable_disable_text"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_pass_reset"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/btn_prev"
            style="@style/SP_TXT_BTN_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/login_btn_prev"/>
        <TextView
            android:id="@+id/btn_next"
            style="@style/SP_TXT_BTN_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/login_btn_next"
            android:transitionName="btn_next"/>
    </LinearLayout>
</RelativeLayout>