<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/phoneenter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">
        <Spinner
            android:id="@+id/list_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_water"
            android:paddingLeft="5dp"
            android:spinnerMode="dropdown" />
        <EditText
            android:id="@+id/ip_phone"
            style="@style/EditTextCustomHolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/phoneverify_enter"
            android:imeOptions="actionNone"
            android:inputType="phone"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneenter_layout"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/btn_prev"
            style="@style/SP_TXT_BTN_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/phoneverify_btn_resend"/>
        <TextView
            android:id="@+id/btn_next"
            style="@style/SP_TXT_BTN_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/phoneverify_btn_verify"
            android:transitionName="btn_next"/>
    </LinearLayout>
</RelativeLayout>