<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="7dp">

    <EditText
        android:id="@+id/ip_phoneoremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/login_step1"
        android:textColorHint="@color/grey_500"
        android:imeOptions="actionNone"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:gravity="center"
        style="@style/EditTextCustomHolo"/>
    <LinearLayout
        android:id="@+id/country_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip_phoneoremail"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_login"
            android:textColor="@color/grey_900"/>
        <Spinner
            android:id="@+id/list_country"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@color/transparent_water"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country_selection"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/btn_next"
            style="@style/SP_TXT_BTN_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_next"
            android:gravity="right"
            android:transitionName="btn_next"/>
    </LinearLayout>
</RelativeLayout>