<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ViewSwitcher
            android:id="@+id/dot_wall_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp">

            <co.samepinch.android.app.helpers.widget.SIMView
                android:id="@+id/dot_wall_image"
                android:layout_width="@dimen/signup_avatar_size"
                android:layout_height="@dimen/signup_avatar_size" />

            <TextView
                android:id="@+id/dot_wall_image_txt"
                style="@style/SP_NAV_NAME"
                android:layout_width="@dimen/signup_avatar_size"
                android:layout_height="@dimen/signup_avatar_size"
                android:layout_gravity="center_horizontal|center" />
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transparent_bg1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dot_wall_name"
                    style="@style/SP_TEXT.SUB_HEADING"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="2dp"
                    android:text="@string/hint_wall_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/dot_wall_about"
                style="@style/SP_TEXT.METADATA.ABOUTME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/loading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/dot_wall_edit_wrapper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dot_wall_edit"
                        style="@style/SP_TEXT.METADATA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/new_pencil_small_blue"
                        android:gravity="center_horizontal"
                        android:text="@string/hint_edit" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dot_wall_followers_count_wrapper"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dot_wall_followers_count"
                        style="@style/SP_TEXT.METADATA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/new_favorite_outline_gray"
                        android:gravity="center_horizontal"
                        android:text="@string/loading" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dot_wall_posts_count_wrapper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dot_wall_posts_count"
                        style="@style/SP_TEXT.METADATA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_add_plus_circle_copy"
                        android:gravity="center_horizontal"
                        android:text="@string/loading" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dot_wall_blog_wrapper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/new_info_small_blue" />-->

                    <TextView
                        android:id="@+id/dot_wall_blog"
                        style="@style/SP_TEXT.METADATA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/new_info_small_blue"
                        android:gravity="center_horizontal"
                        android:text="@string/hint_blog" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</merge>